# MyMusic

./: build_android.sh  settings.gradle
PlayerLibrary/: CMakeLists.txt  build.gradle
PlayerLibrary/src/main/: AndroidManifest.xml
PlayerLibrary/src/main/cpp/: AndroidLog.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlayStatus.cpp  WlPlayStatus.h  WlQueue.cpp  WlQueue.h  native-lib.cpp
PlayerLibrary/src/main/java/com/example/playerlibrary/: Demo.java
PlayerLibrary/src/main/java/com/example/playerlibrary/listener/: WlOnParparedListener.java
PlayerLibrary/src/main/java/com/example/playerlibrary/log/: MyLog.java
PlayerLibrary/src/main/java/com/example/playerlibrary/player/: WlPlayer.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mymusic/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
jnithread/: CMakeLists.txt  build.gradle
jnithread/src/androidTest/java/com/example/jnithread/: ExampleInstrumentedTest.java
jnithread/src/main/: AndroidManifest.xml
jnithread/src/main/cpp/: AndroidLog.h  JavaListener.cpp  JavaListener.h  native-lib.cpp
jnithread/src/main/java/com/example/jnithread/: MainActivity.java  ThreadDemo.java
jnithread/src/main/res/layout/: activity_main.xml
jnithread/src/test/java/com/example/jnithread/: ExampleUnitTest.java
